--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 :root {
     font-family: "Satoshi", system-ui, sans-serif;
     font-size: 16px;
@@ -17,6 +19,7 @@
 $bg: #1b1e28;
 $cta: #5de4c7;
 $red: #d75b5b;
+$blue: #89ddff;
 
 @mixin disable-border {
     border: 0px none rgba(black, 0);
@@ -68,42 +71,6 @@ ul {
     padding: 0;
 }
 
-li {
-    list-style: none;
-    background-color: #303340;
-    @include round(0.75em, 0.75em);
-    padding: 15px 20px;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    #heading {
-        font-weight: 600;
-        font-size: 28px;
-        margin-bottom: 5px;
-    }
-
-    button {
-        height: 40px;
-        width: 100px;
-        font-size: 20px;
-        background-color: $red;
-        @include disable-border;
-        @include round(0.4em, 0.4em);
-        color: black;
-    }
-
-    button:hover {
-        background-color: darken($red, 10%);
-    }
-
-    button:active {
-        background-color: darken($red, 30%);
-    }
-}
-
 form {
     margin: 80px 0;
     position: relative;
@@ -117,10 +84,12 @@ form {
         background-color: #343a4e;
         @include disable-border;
         @include round(0.6rem, 0.6rem);
+        transition: background-color 0.3s;
     }
 
     #url:focus {
         outline: none;
+        background-color: darken(#343a4e, 5%);
     }
 
     .btn {
@@ -135,8 +104,9 @@ form {
         @include round(0px, 0.6rem);
         font-size: 20px;
         color: black;
-        font-weight: 400;
+        font-weight: 500;
         z-index: 10;
+        transition: background-color 0.2s;
     }
 
     .btn:hover {
@@ -144,5 +114,92 @@ form {
     }
     .btn:active {
         background-color: darken($cta, 40%);
+    }
+}
+
+#result {
+    display: flex;
+    place-items: center;
+    justify-content: space-between;
+    background-color: darken($bg, 3%);
+    width: 80%;
+    padding: 1em 1.5em;
+    font-size: 1.5em;
+    font-weight: 600;
+    margin-bottom: 50px;
+    @include round(0.8em, 0.8em);
+
+    button {
+        background-color: $blue;
+        color: black;
+        @include disable-border;
+        padding: 0.4em 1.5em;
+        @include round(0.4em, 0.4em);
+        font-size: 1.2rem;
+        font-weight: 500;
+        transition: background-color 0.2s;
+    }
+
+    button:hover {
+        background-color: darken($blue, 15%);
+    }
+
+    button:active {
+        background-color: darken($blue, 30%);
+    }
+}
+
+li {
+    list-style: none;
+    background-color: #303340;
+    @include round(0.75em, 0.75em);
+    padding: 15px 20px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-basis: 400px;
+
+    #heading {
+        font-weight: 600;
+        font-size: 28px;
+        margin-bottom: 5px;
+    }
+
+    .buttons {
+        display: flex;
+        gap: 1em;
+    }
+
+    button {
+        width: 80px;
+        font-size: 1.2rem;
+        background-color: $red;
+        padding: 0.4rem 0.6rem;
+        @include disable-border;
+        @include round(0.4em, 0.4em);
+        color: black;
+        transition: background-color 0.2s;
+    }
+
+    #blue {
+        background-color: $blue;
+    }
+
+    #blue:hover {
+        background-color: darken($blue, 15%);
+    }
+
+    #blue:hover {
+        background-color: darken($blue, 30%);
+    }
+
+    button:hover {
+        background-color: darken($red, 10%);
+    }
+
+    button:active {
+        background-color: darken($red, 30%);
     }
 }
